--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,7 @@
     tools:context="com.project.kongdy.mybattery.MainActivity">
 
     <com.project.kongdy.mybattery.view.MyBattery
+        android:id="@+id/aaa"
         android:layout_width="200dp"
         android:layout_height="100dp"
         app:mb_showPercent="true"/>
