--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -3,5 +3,8 @@
 
     <declare-styleable name="MyBattery">
         <attr name="mb_showPercent" format="boolean"/>
+        <attr name="mb_powerColor" format="color"/>
+        <attr name="mb_baseColor" format="color"/>
+        <attr name="mb_percentTextSize" format="dimension"/>
     </declare-styleable>
 </resources>
